Fix dirent Windows issue

--- a/Modules/CaPTkInteractiveSegmentationModule/CMakeLists.txt
+++ b/Modules/CaPTkInteractiveSegmentationModule/CMakeLists.txt
@@ -1,7 +1,8 @@
 mitk_create_module(
-  INCLUDE_DIRS PUBLIC include third_party/yaml-cpp third_party/jsoncpp/include
+  INCLUDE_DIRS PUBLIC include third_party/jsoncpp/include #third_party/yaml-cpp
   PACKAGE_DEPENDS ITK Qt5|Core+Widgets
   DEPENDS PUBLIC MitkCore MitkMultilabel #MitkCaPTkCommon
+  PACKAGE_DEPENDS PUBLIC YamlCpp
 )
 
 add_subdirectory(cmdapps)
