--- a/Plugins/org.mitk.gui.qt.captkinteractivesegmentation/CMakeLists.txt
+++ b/Plugins/org.mitk.gui.qt.captkinteractivesegmentation/CMakeLists.txt
@@ -5,6 +5,6 @@ include_directories(${CTK_INCLUDE_DIRS})
 mitk_create_plugin(
   EXPORT_DIRECTIVE MITK_QT_SEGMENTATION
   EXPORTED_INCLUDE_SUFFIXES src
-  PACKAGE_DEPENDS ITK OpenCV
+  PACKAGE_DEPENDS ITK OpenCV YamlCpp
   MODULE_DEPENDS MitkSegmentation MitkSegmentationUI MitkCaPTkInteractiveSegmentationModule
 )
